--- a/Bacchus/app/assets/stylesheets/application.scss
+++ b/Bacchus/app/assets/stylesheets/application.scss
@@ -12,4 +12,14 @@
  *
  *= require_tree .
  *= require_self
+ *= require material_icons
  */
+
+ @import "materialize";
+ @import "materialize/extras/nouislider";
+
+
+ html, body {
+    height: 100%;
+    margin: 0;
+}
